# funasr-batch-studio

./: .gitattributes  .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  SECURITY.md  launch_funasr_gui.py  pyproject.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
docs/: AGENT_HANDOFF.md  ARCHITECTURE.md  OPEN_SOURCE_CHECKLIST.md  QA_REPORT.md
funasr_gui/: __init__.py  app.py  cli.py
funasr_gui/core/: __init__.py  diagnostics.py  models.py  paths.py  presets.py  storage.py  transcriber.py  worker.py
funasr_gui/gui/: __init__.py  main_window.py
tests/: test_core.py  test_gui_smoke.py
